--- a/css/style.css
+++ b/css/style.css
@@ -1,8 +1,11 @@
+body{
+    overflow-x: hidden;
+}
 .top_header{
     background-color: #333;
     height: 80px;
-    position: fixed;
-    width: 110%;
+    /* position: fixed; */
+    /* width: 110%; */
 }
 .logo img {
     padding-left: 10%;
@@ -79,10 +82,61 @@
 .reg_btn:hover{
     color: white;
 }
+.our_services{
+    background-image: url('../img/bg_map-1.png');
+    height: 660px;
+    padding-top: 80px;
+    padding-bottom: 144px;
+    background-color: #f9f9f9!important;
+}
+.heading_services h2{
+    text-align: center;
+    font-family: 'Roboto',Helvetica,Arial,Lucida,sans-serif;
+    color: #333!important;
+    letter-spacing: 1px;
+    
+}
+.service_content{
+    float: left;
+    margin: 22px;
+}
+.divider{
+    position:absolute;
+    left:100%;
+    top:10%;
+    height: 100%;
+    bottom:10%;
+    border-left:1px solid black;
+}
+
+.our_products{
+    background-image: url('../img/11-1.jpg');
+    height: 849.3px;
+    /* transform: translate(0px, 60.7641px); */
+}
+.product_heading{
+    height: 0px;
+}
+.product_heading h2{
+    color: white;
+    font-family: 'Roboto',Helvetica,Arial,Lucida,sans-serif;
+    color: #fff!important;
+    letter-spacing: 1px;
+    padding-top: 70px;
+    font-size: 26px;
+}
+.product_content{
+    float: left;
+    color: white;
+    padding-left: 100px;
+    padding-top: 0px!important;
+}
+
 
 .footer{
     background-color: #333;
     height: 50px;
+    width: 101%;
     
 }
 .footer p{
